# $Id$

2007-01-06	Konstantin V. Arkhipov

	* core/DB/PostgresDialect.class.php: default tsearch configuration
	changed to 'utf8_russian'.

	* core/DB/MyImprovedDialect.class.php, core/DB/MySQLim.class.php: new
	DB connector.

	* meta/builders/SchemaBuilder.class.php: fixed creation ManyToMany
	helper tables.

	* core/OSQL/DBTable.class.php: ability to add unique indexes added.

	* core/OSQL/DBColumn.class.php: unique property dropped.

	* core/DB/Sequenceless.class.php: obtainSequence() and query() are
	final now.

	* doc/project.skel/: meta and config updated.

	* core/DB/DBFactory.class.php: removed in favour of DBPool.

	* core/DB/: cleaned out DB class and all available connectors.

2007-01-05	Konstantin V. Arkhipov

	* meta/: ValueObject pattern implemented, as requested by Antony;
	unused hints support dropped.

2007-01-03	Konstantin V. Arkhipov

	* meta/classes/MetaClassProperty.class.php: removed evil hack for
	MySQL's booleans.

	* meta/builders/SchemaBuilder.class.php: ManyToMany relations building
	implemented.

	* ext/src/core/DB/Dialect.c: rare memory corruption fixed.

2007-01-02	Konstantin V. Arkhipov

	* meta/builders/AutoClassBuilder.class.php: added method for filling
	encapsulated containers.

	* meta/builders/ContainerClassBuilder.class.php: no more
	getChildIdField() for OneToMany containers.

	* main/Criteria/Criteria.class.php: collection's fetching implemented.

	* main/DAOs/StorableDAO.class.php: path's digging simplified a bit.

2006-12-30	Konstantin V. Arkhipov

	* meta/, main/Criteria/Criteria.class.php: correct handling of
	self-encapsulating classes implemented.

	* main/Criteria/Criteria.class.php: cascading fetch-strategy is
	working again.

	* main/Containers/Unified/ManyToManyLinkedFull.class.php,
	main/Containers/Unified/ManyToManyLinkedLazy.class.php: removed
	distinct clause from fetch queries.

	* core/Criteria/: moved to main/.

	* core/DB/PostgresDialect.class.php: do-not-quote-integer's logic
	resurrected.
