@@ -1,13 +1,13 @@
 <?php
-/***************************************************************************
- *   Copyright (C) 2005 by Anton E. Lebedevich, Konstantin V. Arkhipov     *
- *                                                                         *
- *   This program is free software; you can redistribute it and/or modify  *
- *   it under the terms of the GNU General Public License as published by  *
- *   the Free Software Foundation; either version 2 of the License, or     *
- *   (at your option) any later version.                                   *
- *                                                                         *
- ***************************************************************************/
+/****************************************************************************
+ *   Copyright (C) 2005-2007 by Anton E. Lebedevich, Konstantin V. Arkhipov *
+ *                                                                          *
+ *   This program is free software; you can redistribute it and/or modify   *
+ *   it under the terms of the GNU General Public License as published by   *
+ *   the Free Software Foundation; either version 2 of the License, or      *
+ *   (at your option) any later version.                                    *
+ *                                                                          *
+ ****************************************************************************/
 /* $Id$ */
 
 	/**
@@ -15,7 +15,8 @@
 	 * 
 	 * @ingroup OSQL
 	**/
-	abstract class FullText implements DialectString
+	abstract class FullText
+		implements DialectString, MappableObject, LogicalObject
 	{
 		protected $logic = null;
 		protected $field = null;
@@ -32,6 +33,20 @@
 			$this->field = $field;
 			$this->words = $words;
 			$this->logic = $logic;
+		}
+		
+		public function toMapped(StorableDAO $dao, JoinCapableQuery $query)
+		{
+			return new $this(
+				$dao->guessAtom($this->field, $query),
+				$this->words,
+				$this->logic
+			);
+		}
+		
+		public function toBoolean(Form $form)
+		{
+			throw new UnsupportedMethodException();
 		}
 	}
 ?>
